Java: fix deprecation warnings in tests